# sokdak-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.dev.yml  compose.prod.yml  compose.yml  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
app/: main.py
app/character/application/error/: __init__.py  (+1 more)
core/: logging.py  setting.py
core/ai/client/: __init__.py  fake_client.py  langchain_client.py  llm_client.py  open_ai_client.py
core/ai/message/: __init__.py  message.py  message_factory.py
core/ai/prompt/: __init__.py  chat_prompt.py  persona_prompt_mapper.py  summary_prompt.py
core/ai/service/: __init__.py  llm_service.py  open_ai_service.py
core/auth/: __init__.py  jwt_handler.py
core/db/: __init__.py  beanie.py  mongo.py
core/infra/redis/: client.py  keys.py
core/middleware/: logging_middleware.py
test/api/character/: conftest.py  test_get_characters.py  test_get_personas.py  test_post_character.py
test/api/chat/: conftest.py  test_delete_conversation.py  test_post_conversation.py  test_post_message.py
test/api/: conftest.py
test/api/character/: conftest.py  test_get_character_by_id.py  test_get_personas.py  test_patch_character.py  test_post_character.py
test/api/chat/: conftest.py  test_get_conversation_by_id.py  test_get_conversations.py  test_get_messages.py
test/double/ai/: __init__.py  fake_llm_client.py
test/double/repository/: __init__.py  in_memory_character_repository.py  in_memory_conversation_repository.py  in_memory_ephemeral_message_repository.py  in_memory_persistent_message_repository.py
(+104 files in other folders)
